objects/Use_Case__c.object
<CustomObject>
    <description>Added to the Requirements Tracker, this models a &quot;classic use case&quot;, Jacobson style, which is an episode of interaction between an Actor and a System, and which achieves a goal of value to the Actor.</description>
    <fields>
        <fullName>Alternate_Flows__c</fullName>
        <label>Alternate Flows</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Basic_Flow_of_Events__c</fullName>
        <label>Basic Flow of Events</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimating_Notes__c</fullName>
        <label>Estimating Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to exclude standard PSE use cases from a particular implementation</description>
        <inlineHelpText>Use this flag to exclude a standard PSE use case from a particular implementation</inlineHelpText>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Entails integration</description>
        <inlineHelpText>Entails integration</inlineHelpText>
        <label>Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creation</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Query</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Other Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ordinal__c</fullName>
        <formula>Supports_Process__r.Ordinal__c * 100 +  CASE( Operation_Type__c ,
&quot;&quot;,0,
&quot;Creation&quot;,10,
&quot;Integration&quot;,10,
&quot;Query&quot;,15,
&quot;Update&quot;,20,
&quot;Deletion&quot;,30,
&quot;Notification&quot;, 40,
&quot;Other Modification&quot;, 40,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordinal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Postconditions__c</fullName>
        <label>Postconditions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <label>Preconditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Actor_Name__c</fullName>
        <formula>IF( Primary_Actor__r.Abstract__c , &quot;[&quot;, &quot;&quot;) + Primary_Actor__r.Actor__c + IF( Primary_Actor__r.Abstract__c , &quot;]&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Actor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Actor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Actor</label>
        <referenceTo>Actor__c</referenceTo>
        <relationshipLabel>Use Cases (Primary Actor)</relationshipLabel>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Object__c</fullName>
        <formula>Supports_Process__r.Primary_Domain_Object__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Supports_Process__r.Process__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Effort__c</fullName>
        <formula>(1 - Percent_Complete__c)  *  Size_in_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_in_Hours__c</fullName>
        <label>Size in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supports_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supports Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <label>Trigger</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <length>90</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Use Case</label>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>Use Case Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>